# mac-storage-clear

./: .eslintrc.cjs  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  deploy-website.yml  release-appstore.yml  release-devid.yml
docs/: APP_REVIEW_NOTES.md  ARCHITECTURE.md  DISTRIBUTION.md  DNS_SETUP.md  PRIVACY_DECISIONS.md
helper/: Cargo.toml
helper/src/: main.rs
scripts/: claim-orphaned-home.sh
src/: App.tsx
src-tauri/: Cargo.toml  PrivacyInfo.xcprivacy  entitlements.appstore.plist  entitlements.devid.plist  tauri.conf.appstore.json  tauri.conf.devid.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/categories/: mod.rs  screenshots.rs  trash.rs
src-tauri/src/delete/: mod.rs
src-tauri/src/index/: mod.rs  schema.rs
src-tauri/src/privileged/: disabled.rs  helper_client.rs  mod.rs
src-tauri/src/scanner/: mod.rs  queries.rs  walk.rs  writer.rs
src-tauri/src/scope/: full_disk.rs  mod.rs  sandboxed.rs
src/components/: Breadcrumbs.tsx  BuildBadge.tsx  Categories.tsx  CategoryDetail.tsx  DeleteMenu.tsx  DeleteProgress.tsx  LargestFiles.tsx  LogOverlay.tsx  Quarantine.tsx  ScanProgress.tsx  ThemePicker.tsx  Treemap.tsx
src/lib/: format.ts  scan.ts  tauri.ts  theme.tsx
src/styles/: index.css
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
website/public/: CNAME  robots.txt
website/src/components/: CopyableCommand.astro  Feature.astro
website/src/layouts/: Base.astro
website/src/pages/: index.astro  privacy.astro  support.astro  terms.astro
