[package]
name = "mac-storage-clear-helper"
description = "Privileged session-scoped helper for Mac Storage Clear (dev-ID build only)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mac-storage-clear-helper"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
